# obfuscation_samples

./: README.md
.github/workflows/: cmake-single-platform.yml
c_crypto/: .gitignore  CMakeLists.txt  chall.h  chall_1.c  chall_2.c  helpers.c  helpers.h  main.c  main_ob.c  tigress_opaque.c
c_crypto/build_ob/: CMakeCache.txt  Makefile  cmake_install.cmake
c_hash/: CMakeLists.txt  chall_1.c  helpers.c  tigress_out.c
c_hash/targets/: obfuscator_challenge  obfuscator_challenge.vmp  obfuscator_challenge_obf  obfuscator_challenge_tigress  obfuscator_challenge_vmp
targets/: obfuscator_challeng_pure  obfuscator_challeng_tigress_virtual
